# safeheap

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  safeheap.h
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
core/memory/: memory.c  memory.h
core/secure/: secure.c  secure.h
core/secure/encryption/: encryption.c  encryption.h
core/secure/fragmentation/: fragmentation.c  fragmentation.h
core/secure/noising/: noising.h
core/secure/object/: object.c  object.h
core/secure/wiping/: wiping.c  wiping.h
docs/: CONTRIBUTION.md  Diagrams.drawio
interface/allocate/: allocate.c  allocate.h
tests/: test.c
